--- a/_posts/2024-07-02-admm.md
+++ b/_posts/2024-07-02-admm.md
@@ -24,7 +24,7 @@ ADMM resuelve un problema de dos variables definido como sigue:
 
 sujeto a
 
-\\[Ax + Bz = c\\]
+\\[ Ax + Bz = c \\]
 
 El lagrangiano del problema queda definido como: 
 
@@ -32,7 +32,7 @@ El lagrangiano del problema queda definido como:
 
 la receta de solución es: 
 1. Resolver el subproblema de x. → \\( x^{k+1} = \text{argmin}_{x} \; \mathcal{L}(x, z^k, s^k)  \\)
-2. Resolver el sobproblema de z. → \\( z^{k+1} = \text{argmin}_{z} \; \mathcal{L}(x^{k+1}, z, s^k)  \\)
+2. Resolver el subproblema de z. → \\( z^{k+1} = \text{argmin}_{z} \; \mathcal{L}(x^{k+1}, z, s^k)  \\)
 3. Actualizar la variable auxiliar s. → \\( s^{k+1} = s^k + Ax^{k+1} + Bz^{k+1} - c  \\)
 4. Volver a 1.
 
